# nfcs-classifier

./: .gitignore  README.md  pyproject.toml  setup.cfg
old/: AttentionMap.ipynb  FaceDatasetSamples.ipynb  Plot-mask_eval.ipynb  crop_faces.py  deeplabv3p.py  evaluate_masks.py  landmark_seg.py  sam.py  super_resolution.ipynb
old/Tatiany-Regioes/: Oclusion_xlsx-splitter.ipynb  Optuna-GenerateExcel.py  Optuna-LoadStudy.ipynb  ViT-Training_Optuna.ipynb  ViT-Training_Optuna.py  find-unannotated.ipynb  projeto_dor.py  run_model-occlusion.py  run_model.py
old/classification/: eval-occlusion.ipynb  eval-results.ipynb  region-classification.ipynb
old/face-alignment/: Landmark-FaceSynthetics.ipynb  Landmark-Mediapipe.ipynb  Landmark-Post-segmentation.ipynb  test_masks.ipynb
old/mosaic-2.0/: DatasetTests.ipynb  mosaic.py
old/test/: test-mask_eval.ipynb
old/utility/: Convert_UNIFESP_labels.ipynb  file_utils.py  labelme_label2mask.py
src/: runner.py
src/config/: .env  __init__.py  dataset.py  logger.py  model.py
src/config/dataset_config/: .UNIFESP-NFCS.env  .UNIFESP.env
src/dataset/: datasets.py  exceptions.py  factory.py
src/model/pipeline/: trainer.py  transforms.py
src/model/pipeline/models/: vit.py
src/utils/: nfcs.py
